<resources>
    <string name="app_name">Fresco Custom</string>

    <string name="navdrawer_title">@string/app_name</string>
    <string name="navdrawer_subtitle">dengyuhan/FrescoSample</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="welcome_title">@string/app_name</string>
    <string name="welcome_nav_title">欢迎页</string>
    <string name="welcome_text_intro">本示例演示了Fresco一些实际应用场景，主要以实现场景为目标，所以部分场景会有Fresco和其它库结合使用的情况。</string>
    <string name="welcome_text_learn_more">如果需要了解更多关于Fresco的信息，可以点击下面的链接。</string>
    <string name="welcome_button_github">FrescoSample GitHub</string>
    <string name="welcome_button_article">FrescoSample 文章</string>
    <string name="welcome_button_doc">Fresco 文档</string>

    <string name="welcome_label_github">https://github.com/dengyuhan/FrescoSample</string>
    <string name="welcome_label_article">https://xiandan.in</string>
    <string name="welcome_label_doc">https://frescolib.org</string>

    <string name="category_drawee">示例</string>
    <string name="shape_title">形状</string>
    <string name="shape_round_label">圆形</string>
</resources>
